<resources>
    <string name="app_name">Deal Breaker</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="title_activity_initial_screen">Login or Register</string>
    <string name="login_button">"Login"</string>
    <string name="register_button">"Register"</string>
    <string name="facebook_login">"Login w/ Facebook"</string>
    <string name="username_edit">"username"</string>
    <string name="password_edit">"password"</string>
    <string name="email_confirm">"confirm email"</string>
    <string name="password_confirm">"confirm password"</string>
    <string name="register_activity_title">Register</string>
    <string name="user_fragment">User Info</string>
    <string name="roaming_fragment">Desired Match Info</string>
    <string name="height_attribute">Height:</string>
    <string name="height_attribute_hint">height in inches</string>
    <string name="age_attribute">Age:</string>
    <string name="age_attribute_hint">age</string>
    <string name="sexual_or_attribute">Sexual Orientation:</string>
    <string name="sexual_or_attribute_hint">straight, gay, bisexual</string>
    <string name="sex_attribute">Sex:</string>
    <string name="sex_attribute_hint">sex (male/female)</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="finished_button">Set!</string>
    <string name="next_button">Set!</string>
    <string name="key_UserEmail">userEmail</string>
    <string name="key_UserName">userName</string>
    <string name="title_activity_user_navigation">UserNavigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="biography_label">Bio:</string>
    <string name="bad_qualities_label">Bad Qualities:</string>
    <string name="good_qualities_label">Good Qualities:</string>
    <string name="userProfilePicTag">User Profile Picture</string>
    <string name="nav_userGallery">Images</string>
    <string name="nav_userPreferences">Preferences</string>
    <string name="nav_userAdded">Relationships</string>
    <string name="nav_userHome">Profile</string>
    <string name="nav_roaming">Roaming</string>
    <string name="nav_commTitle">Communicate</string>
    <string name="nav_Share">Share</string>
    <string name="user_profilePicDescription">user\'s profile picture</string>
    <string name="userNamesDefault">FirstName LastName</string>
    <string name="FirebaseOnCancelledError">Firebase Read Failed! </string>

    <string name="LogTagUserProfile">UserProfile: </string>
    <string name="LogTagRoaming">RoamingFragment: </string>
    <string name="LogTagUserInfo">UserInfoFragment: </string>
    <string name="LogTagDownload">DownloadImage: </string>
    <string name="LogTagUpload">UploadFile: </string>
    <string name="RemoveConfirmedUser">Remove</string>

    <string name="removeUserYes">No!</string>
    <string name="removeUserNo">Fine, one more chance.</string>

    <string name="ChooseImageButtonLabel">Choose Image</string>
    <string name="UploadImageButtonLabel">Upload Image</string>

    <string name="ConfirmedRelationshipLabel">Confirmed</string>
    <string name="PendingRelationshipLabel">Pending</string>

    <string name="ContactInfoLabel">Contact Info</string>
    <string name="GotItLabel">Got It!</string>
    <string name="OKAY">Yes!</string>
    <string name="Inches">"</string>
    <string name="RoamingScreenLabel">Search for Potential Relationships</string>

</resources>
