<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    tools:context="roast.app.com.dealbreaker.fragments.RoamingAttribute">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_attribute"
        android:textSize="20sp"
        android:id="@+id/age_label"
        android:layout_marginTop="35dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex_attribute"
        android:id="@+id/sex_label"
        android:textSize="20sp"
        android:layout_below="@+id/age_label"
        android:layout_alignLeft="@id/age_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexual_or_attribute"
        android:id="@+id/sexual_or_label"
        android:textSize="15sp"
        android:layout_below="@+id/sex_label"
        android:layout_alignLeft="@id/sex_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_attribute"
        android:id="@+id/height_label"
        android:textSize="20sp"
        android:layout_below="@+id/sexual_or_label"
        android:layout_alignLeft="@id/sexual_or_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/height_attribute_hint"
        android:textColor="@color/black"
        android:ems="10"
        android:id="@+id/et_roaming_height"
        android:layout_alignBottom="@+id/height_label"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-10dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/sexual_or_attribute_hint"
        android:textColor="@color/black"
        android:ems="10"
        android:id="@+id/et_roaming_sexual_or"
        android:layout_alignBottom="@+id/sexual_or_label"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/age_attribute_hint"
        android:textColor="@color/black"
        android:ems="10"
        android:id="@+id/et_roaming_age"
        android:layout_alignBottom="@+id/age_label"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-10dp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroupSexRoaming"
        android:layout_alignBottom="@+id/sex_label"
        android:layout_alignStart="@+id/et_roaming_age"
        android:layout_marginBottom="-10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="male"
            android:id="@+id/radioButtonMaleRoaming"
            android:checked="false"
            android:layout_above="@+id/sexual_or_label"
            android:layout_toEndOf="@+id/radioGroupSexRoaming" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="female"
            android:id="@+id/radioButtonFemaleRoaming"
            android:checked="false"
            android:layout_alignTop="@+id/radioButtonMaleRoaming"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp" />
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_button"
        android:id="@+id/finished_roaming_attribute_button"
        android:background="@color/red"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/et_roaming_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

</RelativeLayout>
</ScrollView>