<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        tools:context="roast.app.com.dealbreaker.fragments.UpdateImage">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="200dp"
            android:id="@+id/imageCurrentProfilePic"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_profilePicDescription"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ChooseImageButtonLabel"
            android:id="@+id/chooseImageButton"
            android:background="@color/colorAccent"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/imageCurrentProfilePic"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/UploadImageButtonLabel"
            android:background="@color/colorAccent"
            android:id="@+id/uploadImageButton"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/chooseImageButton"
            android:layout_alignStart="@+id/chooseImageButton" />

    </RelativeLayout>
</ScrollView>