<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="roast.app.com.dealbreaker.InitialScreen"
    android:background="#ffffff">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:id="@+id/identity"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:id="@+id/login_button"
        android:textStyle="bold"
        android:background="@drawable/login_button"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/loginErrorMessage"
        android:layout_alignStart="@+id/register_button"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/register_button"
        android:id="@+id/register_button"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:ems="10"
        android:id="@+id/LoginUsername"
        android:layout_marginTop="51dp"
        android:hint="@string/username_edit"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_below="@+id/identity"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:ems="10"
        android:id="@+id/LoginPassword"
        android:hint="@string/password_edit"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_below="@+id/LoginUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email and password combination do not match. Please try again."
        android:id="@+id/loginErrorMessage"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_below="@+id/LoginPassword"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Forgot Password"
        android:textColor="@color/com_facebook_button_background_color"
        android:id="@+id/forgotPasswordLink"
        android:layout_below="@+id/loginErrorMessage"
        android:layout_centerHorizontal="true"/>

    <!-- <com.facebook.login.widget.LoginButton
         android:id="@+id/facebook_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/facebook_login"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="43dp"
         android:layout_below="@+id/register_button"
         android:layout_centerHorizontal="true" />
 -->


</RelativeLayout>

